<resources>
    <string name="app_name">14Gallery</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_search_description">Icon search</string>
    <string name="search_title">Search</string>
    <string name="clear_choose">Clear</string>
    <string name="icon_camera_description">Icon camera</string>
    <string name="camera_title">Camera</string>
    <string name="icon_menu_description">Icon menu</string>
    <string name="more_title">Khác</string>
    <string name="grid_column_2">Column 2</string>
    <string name="grid_column_3">Column 3</string>
    <string name="grid_column_4">Column 4</string>
    <string name="grid_column_5">Column 5</string>
    <string name="grid_columns">Columns</string>
    <string name="view_mode">Xem dưới dạng</string>
    <string name="view_mode_normal">Lên rồi xuống</string>
    <string name="view_mode_convert">Đảo ngược</string>
    <string name="setting_description">Setting</string>
    <string name="setting_title">Cài đặt</string>
    <string name="choose_description">Lựa chọn</string>
    <string name="choose_title">Chọn tất cả</string>
    <string name="add_description">Thêm album</string>
    <string name="add_title">Thêm album</string>
    <string name="view_mode_day">Xếp theo ngày</string>
    <string name="view_mode_month">Xếp theo tháng</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="nav_image_title">Ảnh</string>
    <string name="nav_album_title">Albums</string>
    <string name="nav_search_title">Tìm kiếm</string>
    <string name="share_title">Chia sẻ</string>
    <string name="share_description">Share image</string>
    <string name="edit_title">Sửa</string>
    <string name="edit_description">Edit image</string>
    <string name="hide_title">Ẩn</string>
    <string name="hide_description">Hide image</string>
    <string name="delete_title">Xóa</string>
    <string name="delete_description">Delete image</string>
    <string name="more_description">More option</string>
    <string name="rename_title">Đổi tên</string>
    <string name="add_to_album_title">Add to album</string>
    <string name="details_title">Chi tiết</string>
    <string name="no_image_found"><b>Không có ảnh hoặc album</b>\n\nBạn có thể chụp ảnh hoặc tạo album bằng cách thao tác ở trên</string>
    <string name="set_password_success">Set password successful!</string>
    <string name="set_password_fail">Password not match!</string>
    <string name="draw_password_again">Draw your password again</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="create_password">Tạo mật khẩu</string>
    <string name="input_password">Nhập mật khẩu</string>
    <string name="private_label">Riêng tư</string>
    <string name="garbage">Thùng rác</string>
    <string name="albums">Albums</string>
    <string name="album">Album</string>
    <string name="image_manage">Quản lý ảnh</string>
    <string name="prefer">Ưa thích</string>
    <string name="search_here">Tìm kiếm ở đây</string>
    <string name="empty_recycle_bin"><b>Thùng rác trống</b>\n\nChưa có ảnh nào trong thùng rác</string>
    <string name="set_as_title">Set As</string>
    <string name="add_image_title">Thêm ảnh</string>
    <string name="image">Ảnh</string>
    <string name="add_image">Thêm ảnh vào %1$s</string>
    <string name="delete">Xóa</string>
    <string name="import_album">Thêm vào album</string>
    <string name="slideshow">Trình chiếu</string>
    <string name="share">Chia sẻ</string>
    <string name="empty">Empty</string>
    <string name="change_cover_album">Đổi ảnh bìa</string>
    <string name="add_hashtag_description">Thêm hashtag</string>
    <string name="hashtag_textfield_hint">Tên hashtag</string>
    <string name="no_added_hashtag_msg">Không có hashtag nào</string>
    <string name="add">Thêm</string>
    <string name="taken_on_label">Thời gian:</string>
    <string name="file_info_label">File: </string>
    <string name="local_path_label">Đường dẫn:</string>
    <string name="di_chuy_n">Di chuyển</string>
    <string name="deleteAlbum">Xóa album</string>
    <string name="create_gif">Tạo ảnh GIF</string>
    <string name="remove_selected">Bỏ chọn</string>
    <string name="delete_images">Xoá ảnh</string>
    <string name="no_matching_image">Không tìm thấy ảnh phù hợp</string>
    <string name="no_hashtag_message">Chưa có hashtag nào được thêm</string>
    <string name="rename_album">Đổi tên album</string>
    <string name="general">Chung</string>
    <string name="theme">Chủ đề</string>
    <string name="dark_mode">Ban đêm</string>
    <string name="create_pdf">Tạo PDF</string>
    <string-array name="category_search_array">
        <item>Ngày</item>
        <item>Hashtag</item>
    </string-array>
</resources>