<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/clear_choose"
        android:title=""
        android:icon="@drawable/ic_clear"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/img_camera"
        android:icon="@drawable/ic_baseline_camera_enhance_24"
        android:title="@string/camera_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/importAlbums"
        android:title="@string/import_album"
        android:icon="@drawable/ic_album"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/delete_images"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/move_images"
        android:title="Di chuyển"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/slideShow"
        android:title="@string/slideshow"
        android:icon="@drawable/ic_slideshow"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/img_more"
        android:contentDescription="@string/icon_menu_description"
        android:icon="@drawable/ic_menu_24dp"
        android:title="@string/more_title"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/detAlb_add_image"
                android:title="@string/add_image_title" />
            <item
                android:id="@+id/img_choose"
                android:title="@string/choose_title" />

<!--            Để tạm thời cần phải chuyển qua bên detail image sau khi fix lỗi-->
            <item
                android:id="@+id/detAlb_coverAlbum"
                android:title="@string/change_cover_album" />
            <item
                android:id="@+id/img_grid"
                android:title="@string/grid_columns">
                <menu>
                    <item
                        android:id="@+id/img_grid_col_2"
                        android:title="@string/grid_column_2" />
                    <item
                        android:id="@+id/img_grid_col_3"
                        android:title="@string/grid_column_3" />
                    <item
                        android:id="@+id/img_grid_col_4"
                        android:title="@string/grid_column_4" />
                    <item
                        android:id="@+id/img_grid_col_5"
                        android:title="@string/grid_column_5" />
                </menu>
            </item>

            <item
                android:id="@+id/img_view_mode"
                android:title="@string/view_mode">
                <menu>
                    <item
                        android:id="@+id/img_view_mode_normal"
                        android:title="@string/view_mode_normal" />
                    <item
                        android:id="@+id/img_view_mode_convert"
                        android:title="@string/view_mode_convert" />
                    <item
                        android:id="@+id/img_view_mode_day"
                        android:title="@string/view_mode_day" />
                    <item
                        android:id="@+id/img_view_mode_month"
                        android:title="@string/view_mode_month" />
                </menu>
            </item>
            <item
                android:id="@+id/img_setting"
                android:title="@string/setting_title" />
        </menu>

    </item>

</menu>