<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/alb_add"
        android:contentDescription="@string/add_description"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/alb_more"
        android:contentDescription="@string/icon_menu_description"
        android:icon="@drawable/ic_menu_24dp"
        android:title="@string/more_title"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/alb_setting"
                android:title="@string/setting_title" />
            <item
                android:id="@+id/alb_combine"
                android:title="Gộp album"
                />
        </menu>
    </item>
</menu>